tests/errors/type-param.kawa
var point p;

class point {
  attribute int x;
  attribute int y;

  method void constructor (int x, int y) {
    this.x = x;
    this.y = y;
  }

}

main {
  p = new point(1, true); // param n°2 devrait etre de type <int>
  return 0;
}
